@startuml

title __PRIMITIVES's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace physics.primitives {
      class com.apetrei.engine.physics.primitives.AABB {
          + AABB()
          + AABB()
          + getMax()
          + getMin()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics.primitives {
      class com.apetrei.engine.physics.primitives.Box2D {
          + Box2D()
          + Box2D()
          + getMax()
          + getMin()
          + getTransform()
          + getVertices()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics.primitives {
      class com.apetrei.engine.physics.primitives.Collider2D {
          + Collider2D()
          + componentRender()
          + componentUpdate()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics.primitives {
      class com.apetrei.engine.physics.primitives.IntersectionDetector2D {
          {static} + lineAndBox2D()
          {static} + lineInAABB()
          {static} + pointInAABB()
          {static} + pointInBox2D()
          {static} + pointOnLine()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics.primitives {
      class com.apetrei.engine.physics.primitives.Ray2D {
          + Ray2D()
          + getDirection()
          + getOrigin()
      }
    }
  }
  

  com.apetrei.engine.physics.primitives.AABB o-- com.apetrei.misc.Vector2 : center
  com.apetrei.engine.physics.primitives.AABB o-- com.apetrei.misc.Vector2 : halfSize
  com.apetrei.engine.physics.primitives.AABB o-- com.apetrei.misc.Vector2 : size
  com.apetrei.engine.physics.primitives.AABB o-- com.apetrei.engine.components.TransformComponent : transform
  com.apetrei.engine.physics.primitives.Box2D o-- com.apetrei.misc.Vector2 : halfSize
  com.apetrei.engine.physics.primitives.Box2D o-- com.apetrei.misc.Vector2 : size
  com.apetrei.engine.physics.primitives.Box2D o-- com.apetrei.engine.components.TransformComponent : transform
  com.apetrei.engine.physics.primitives.Collider2D -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.physics.primitives.Collider2D o-- com.apetrei.misc.Vector2 : offset
  com.apetrei.engine.physics.primitives.Ray2D o-- com.apetrei.misc.Vector2 : direction
  com.apetrei.engine.physics.primitives.Ray2D o-- com.apetrei.misc.Vector2 : origin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
